# prompt-runner

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
examples/profiles/: example-profile.yml
examples/prompts/: bedtime-story.yml  daily-briefing.yml
profiles/: alan.yml
prompts/: daily-briefing.yml  test-prompt.yml
src/prompt_runner/: __init__.py  __main__.py  cli.py  config.py  rendering.py
src/prompt_runner/delivery/: __init__.py  base.py  email.py
src/prompt_runner/llm/: __init__.py  base.py  openai_provider.py
tests/: test_rendering.py
