[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-runner"
version = "0.1.0"
description = "Schedule prompts to LLMs with web search and deliver responses via email"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Alan Chen" }
]
keywords = ["llm", "automation", "scheduling", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
prompt-runner = "prompt_runner.cli:main"

[project.urls]
Homepage = "https://github.com/alan_chen/prompt-runner"
Repository = "https://github.com/alan_chen/prompt-runner"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
